// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(PieChart)
    data={
      Array [
        Object {
          "name": "Christmas",
          "price": "EUR 5.282,90",
          "y": 10,
        },
        Object {
          "name": "New Year",
          "price": "EUR 5.282,90",
          "y": 20,
        },
        Object {
          "name": "Glitter",
          "price": "EUR 5.282,90",
          "y": 30,
        },
        Object {
          "name": "Hip Hop",
          "price": "EUR 5.282,90",
          "y": 40,
        },
        Object {
          "name": "Street",
          "price": "EUR 5.282,90",
          "y": 50,
        },
        Object {
          "name": "Sunny",
          "price": "EUR 5.282,90",
          "y": 60,
        },
        Object {
          "name": "Casual",
          "price": "EUR 5.282,90",
          "y": 70,
        },
      ]
    }
    title="Distribution of themes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "data": Array [
        Object {
          "name": "Christmas",
          "price": "EUR 5.282,90",
          "y": 10,
        },
        Object {
          "name": "New Year",
          "price": "EUR 5.282,90",
          "y": 20,
        },
        Object {
          "name": "Glitter",
          "price": "EUR 5.282,90",
          "y": 30,
        },
        Object {
          "name": "Hip Hop",
          "price": "EUR 5.282,90",
          "y": 40,
        },
        Object {
          "name": "Street",
          "price": "EUR 5.282,90",
          "y": 50,
        },
        Object {
          "name": "Sunny",
          "price": "EUR 5.282,90",
          "y": 60,
        },
        Object {
          "name": "Casual",
          "price": "EUR 5.282,90",
          "y": 70,
        },
      ],
      "theme": undefined,
      "title": "Distribution of themes",
      "tooltip": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "data": Array [
          Object {
            "name": "Christmas",
            "price": "EUR 5.282,90",
            "y": 10,
          },
          Object {
            "name": "New Year",
            "price": "EUR 5.282,90",
            "y": 20,
          },
          Object {
            "name": "Glitter",
            "price": "EUR 5.282,90",
            "y": 30,
          },
          Object {
            "name": "Hip Hop",
            "price": "EUR 5.282,90",
            "y": 40,
          },
          Object {
            "name": "Street",
            "price": "EUR 5.282,90",
            "y": 50,
          },
          Object {
            "name": "Sunny",
            "price": "EUR 5.282,90",
            "y": 60,
          },
          Object {
            "name": "Casual",
            "price": "EUR 5.282,90",
            "y": 70,
          },
        ],
        "theme": undefined,
        "title": "Distribution of themes",
        "tooltip": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`PieChart Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(PieChart)
    colors={
      Array [
        "#d8d8d8",
        "#b1b1b1",
        "#7e7e7e",
        "#474747",
        "#1a1a1a",
      ]
    }
    data={
      Array [
        Object {
          "name": "Light Light Grey",
          "price": "EUR 5.282,90",
          "y": 10,
        },
        Object {
          "name": "Light Grey",
          "price": "EUR 5.282,90",
          "y": 20,
        },
        Object {
          "name": "Grey",
          "price": "EUR 5.282,90",
          "y": 30,
        },
        Object {
          "name": "Dark Grey",
          "price": "EUR 5.282,90",
          "y": 40,
        },
        Object {
          "name": "Dark Dark Grey",
          "price": "EUR 5.282,90",
          "y": 50,
        },
      ]
    }
    title="Distribution of themes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "colors": Array [
        "#d8d8d8",
        "#b1b1b1",
        "#7e7e7e",
        "#474747",
        "#1a1a1a",
      ],
      "data": Array [
        Object {
          "name": "Light Light Grey",
          "price": "EUR 5.282,90",
          "y": 10,
        },
        Object {
          "name": "Light Grey",
          "price": "EUR 5.282,90",
          "y": 20,
        },
        Object {
          "name": "Grey",
          "price": "EUR 5.282,90",
          "y": 30,
        },
        Object {
          "name": "Dark Grey",
          "price": "EUR 5.282,90",
          "y": 40,
        },
        Object {
          "name": "Dark Dark Grey",
          "price": "EUR 5.282,90",
          "y": 50,
        },
      ],
      "theme": undefined,
      "title": "Distribution of themes",
      "tooltip": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "colors": Array [
          "#d8d8d8",
          "#b1b1b1",
          "#7e7e7e",
          "#474747",
          "#1a1a1a",
        ],
        "data": Array [
          Object {
            "name": "Light Light Grey",
            "price": "EUR 5.282,90",
            "y": 10,
          },
          Object {
            "name": "Light Grey",
            "price": "EUR 5.282,90",
            "y": 20,
          },
          Object {
            "name": "Grey",
            "price": "EUR 5.282,90",
            "y": 30,
          },
          Object {
            "name": "Dark Grey",
            "price": "EUR 5.282,90",
            "y": 40,
          },
          Object {
            "name": "Dark Dark Grey",
            "price": "EUR 5.282,90",
            "y": 50,
          },
        ],
        "theme": undefined,
        "title": "Distribution of themes",
        "tooltip": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`PieChart Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(PieChart)
    colors={
      Array [
        "#6F94AE",
      ]
    }
    data={
      Array [
        Object {
          "name": "Christmas",
          "price": "EUR 5.282,90",
          "y": 10,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowUpdate": false,
      "colors": Array [
        "#6F94AE",
      ],
      "data": Array [
        Object {
          "name": "Christmas",
          "price": "EUR 5.282,90",
          "y": 10,
        },
      ],
      "theme": undefined,
      "tooltip": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowUpdate": false,
        "colors": Array [
          "#6F94AE",
        ],
        "data": Array [
          Object {
            "name": "Christmas",
            "price": "EUR 5.282,90",
            "y": 10,
          },
        ],
        "theme": undefined,
        "tooltip": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
